<resources>
    <string name="app_name">Автоподбор</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="budget">Планируемый бюджет</string>
    <string name="search">Поиск автомобиля</string>
    <string name="calling">Обзвон вариантов</string>
    <string name="preparation">Подготовка к осмотру</string>
    <string name="inspection">Начало осмотра</string>
    <string name="external">Внешний осмотр</string>
    <string name="internal">Осмотр салона</string>
    <string name="engine">Осмотр двигателя</string>
    <string name="electrical">Проверка электроники</string>
    <string name="deal">Оформление сделки</string>
    <string name="result">Заключительный этап</string>
    <string name="name">@string/app_name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Введение</string>
    <string name="text_home"> \n
        Приобретение автомобиля на вторичном рынке связано с необходимостью поиска наиболее лучшего варианта.
        В этом приложении собрано достаточного много информации для снижения рисков покупки проблемного автомобиля. /n
        В приложении будет подробно будет описано как начать поиск авто, на что обратить внимание при осмотре и заключительный этап – сделка. /n
        Приложении не гарантирует 100% покупку исправного автомобиля, здесь лишь описаны наиболее распространённые ошибки скрытия какого-либо дефекта авто.
        С каждым днем эти способы скрытия все лучше и лучше замаскированы под заводское исполнение и требует внимательного подхода к покупке автомобиля. /n
        Не стоит забывать, что у автомобиля помимо проблем с технической стороны могут быть и проблемы с юридической стороны, которые возможно будет сложнее разрешить.
        Напоминаем, что приложение носить лишь информационный характер, что не гарантирует Вам покупку автомобиля без юридических ограничений! </string>
    <string name="heading_budget_1">Необходимые расходы после покупки автомобиля.</string>
    <string name="text_budget_1"> \n
        Когда бюджет на покупку автомобиля уже определен, необходимо учитывать первоочередные траты сразу после покупки автомобиля:
        регистрация в ГИБДД, покупка страховых полисов, диагностика и небольшой ремонт, замена расходных деталей, покупка летних или зимних шин, химчистка салона и т.п.
        Поэтому, если у Вас есть, к примеру, 500 тыс. рублей необходимо покупать автомобиль стоимостью ниже на 10-15% Вашего текущего бюджета т.е. 425 тыс.
        стоимость автомобиля и 75 тыс. на первоочередные расходы. В этом случае остаток денег покроет Ваши первоочередные траты.
        Нельзя покупать автомобиль на последние деньги ни при каких условия!
        Иначе могут появиться непредвиденные расходы, и вся радость от покупки сильно поубавиться и придётся урезать другие расходы. </string>
    <string name="heading_search_1">Источники поиска автомобиля.</string>
    <string name="text_search_1">\n
       Искать автомобиль можно как на онлайн, не выходя из дома, так и посетив площадки официальных дилеров или специальные площадки по продажам подержанных автомобилей.
        Разберем эти варианты поиска подробнее. \n
        Огромное множество объявлений о продаже автомобилей размещены довольно известных интернет ресурсах таких как: авто.ру, дром.ру, авито.ру и юла.ру.
        Конечно же сайтов с объявлениями достаточно много, но хотим выделить только наиболее популярные.
        Найти подходящий вариант, не выходя из дома кажется довольно просто, но если глубоко изучить размещенные объявления, то можно смело из 10 приглянувшихся вариантов откинуть 6, и только оставшиеся 4 объявления уже можно тщательно прорабатывать. \n
        Теперь поговорим про официальных дилеров (ОД). Автомобили, которые продает ОД, были приняты им системе trade-in.
        При покупке у ОФ поддержанного автомобиля есть очень существенный плюс. Практически все автомобили, принятые по системе trade-in не имеют подводных камней в плане юридических ограничений. \n
        Затронем тему специальных площадок по продажам подержанных автомобилей. На них находиться автомобили, которые прежние хозяева оставили на продажу т.к. по каким-то причинам не хотят сами заниматься продажей своего автомобиля.
        Такие машины не рекомендуем рассматривать к покупке, хорошую исправную машину вряд ли кто-то будет выставлять на продажу на подобных площадках.</string>
    <string name="heading_search_2">Поиск объявлений на интернет ресурсах.</string>
    <string name="heading_search_3">Время размещения объявления.</string>
    <string name="text_search_2"> \n
        При поиске автомобиля на интернет ресурсах нужно внимательно изучать объявление. Изучив его, можно не созваниваясь с владельцем, отказаться от осмотра этого автомобиля.
        Искать объявление не стоит по низу рынка т.к шансы нарваться на проблемный автомобиль велики. \n
        Открыв объявление посмотрите как давно выставлено объявление. Объявления которые “висят” месяцами не стоит рассматривать, такие варианты имеют ряд каких то недостатков, из-за которых этот автомобиль не покупают.
        Хорошие, беспроблемные объявления долго не размещаются, потому что их скупают в первые дня или даже часы после размещения. \n
        Для того чтобы быстро отреагировать на объявления, т.е до размещения его на всеобщий показ,можно воспользоваться платными программами, сайтами, которые показывают всю информацию с множества интернет ресурсов и добавляют ее себе на сайт.
        Объявления которые там отображаются еще находиться стадии модерации (примерно 30 минут) и не доступны на самом сайте, где они размещены.
        Но пользователю, которые заплатил за эту услугу, может уже смотреть это объявление и назначать встречу на просмотр, хотя при этом объявления скрыто от общего доступа.
        Именно этими сервисами пользуются перекупщики, автоподборщики и другие продвинутые пользователи. Наиболее известный сервис av100.ru.</string>
</resources>